--- a/demoapp-web/pom.xml
+++ b/demoapp-web/pom.xml
@@ -143,7 +143,7 @@
 		<profile>
 			<id>packageit</id>
 			<activation>
-				<activeByDefault>true</activeByDefault>
+				<activeByDefault>false</activeByDefault>
 			</activation>
 			<build>
 				<plugins>
