--- a/demoapp-web/pom.xml
+++ b/demoapp-web/pom.xml
@@ -9,9 +9,15 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>demoapp-web</artifactId>
-	<packaging>jar</packaging>
+	<packaging>${packaging.type}</packaging>
 	<name>demoapp-web Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+
+	<properties>
+		<packaging.type>war</packaging.type>
+		<compile.exclude>online/smartcompute/demoapp/luncher/*.java</compile.exclude>
+		<resource.dir>src/main/config</resource.dir>
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -93,41 +99,32 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-logging-juli</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-jasper</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-jasper</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-jasper-el</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-jsp-api</artifactId>
-			<scope>runtime</scope>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+		</dependency>
 	</dependencies>
+
 	<build>
 		<finalName>demoapp-web</finalName>
+		<resources>
+			<resource>
+				<directory>${resource.dir}</directory>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
@@ -137,14 +134,61 @@
 					<path>/${web.contextroot}</path>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>${compile.exclude}</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+
 	<profiles>
 		<profile>
+			<properties>
+				<packaging.type>jar</packaging.type>
+				<compile.exclude>src/smartcompute/*.java</compile.exclude>
+				<resource.dir>src/main/resources</resource.dir>
+			</properties>
 			<id>packageit</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.apache.tomcat.embed</groupId>
+					<artifactId>tomcat-embed-core</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.tomcat.embed</groupId>
+					<artifactId>tomcat-embed-logging-juli</artifactId>
+					<scope>runtime</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.tomcat.embed</groupId>
+					<artifactId>tomcat-embed-jasper</artifactId>
+					<scope>runtime</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.tomcat</groupId>
+					<artifactId>tomcat-jasper</artifactId>
+					<scope>runtime</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.tomcat</groupId>
+					<artifactId>tomcat-jasper-el</artifactId>
+					<scope>runtime</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.tomcat</groupId>
+					<artifactId>tomcat-jsp-api</artifactId>
+					<scope>runtime</scope>
+				</dependency>
+			</dependencies>
+
 			<build>
 				<plugins>
 					<plugin>
@@ -181,13 +225,13 @@
 							<programs>
 								<program>
 									<id>demoapp</id>
-									<mainClass>online.smartcompute.demoapp.lunch.DemoAppLuncher</mainClass>
+									<mainClass>online.smartcompute.demoapp.luncher.DemoAppLuncher</mainClass>
 								</program>
 							</programs>
 							<daemons>
 								<daemon>
 									<id>${project.build.finalName}-deamon</id>
-									<mainClass>online.smartcompute.demoapp.lunch.DemoAppLuncher</mainClass>
+									<mainClass>online.smartcompute.demoapp.luncher.DemoAppLuncher</mainClass>
 									<generatorConfigurations>
 										<generatorConfiguration>
 											<generator>jsw</generator>
