--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<slf.version>1.5.0</slf.version>
 		<tomcat.version>8.5.2</tomcat.version>
+		<springfox-version>2.6.1</springfox-version>
 	</properties>
 
 	<dependencyManagement>
@@ -165,6 +166,16 @@
 				<groupId>org.apache.tomcat</groupId>
 				<artifactId>tomcat-jsp-api</artifactId>
 				<version>${tomcat.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger2</artifactId>
+				<version>${springfox-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-ui</artifactId>
+				<version>${springfox-version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
